--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@mantine/core": "^5.6.3",
+    "@mantine/hooks": "^5.6.3",
     "@supabase/supabase-js": "^2.0.4",
     "hls.js": "^1.2.4",
     "plyr": "^3.7.2",
