--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.0.0-rc.12",
+    "@emotion/react": "^11.10.5",
+    "@mantine/core": "^5.6.3",
+    "@mantine/hooks": "^5.6.3",
+    "@supabase/supabase-js": "^2.0.4",
+    "hls.js": "^1.2.4",
     "next": "12.3.1",
+    "plyr": "^3.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
