--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "next": "12.3.1",
     "plyr": "^3.7.2",
     "react": "18.2.0",
+    "react-animejs-wrapper": "^1.0.35",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0"
   },
