--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "@emotion/react": "^11.10.5",
     "@mantine/core": "^5.6.3",
     "@mantine/hooks": "^5.6.3",
-    "@supabase/supabase-js": "^2.0.4",
+    "@supabase/supabase-js": "^1.33.3",
+    "@supabase/ui": "^0.36.5",
     "hls.js": "^1.2.4",
     "next": "12.3.1",
     "plyr": "^3.7.2",
