--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "@emotion/react": "^11.10.5",
     "@mantine/core": "^5.6.3",
     "@mantine/hooks": "^5.6.3",
+    "@supabase/auth-helpers-nextjs": "^0.5.2",
+    "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/supabase-js": "^2.0.4",
     "hls.js": "^1.2.4",
     "next": "12.3.1",
