--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "format": "prettier --write \"frontend/components/*.js\" \"frontend/pages/*.js\""
+    "format": "prettier --write \"frontend/components/**/*.js\" \"frontend/pages/**/*.js\""
   },
   "dependencies": {
     "prettier": "2.7.1"
