--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,13 @@
     "@supabase/auth-helpers-nextjs": "^0.5.2",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/supabase-js": "^2.0.4",
+    "bootstrap": "^5.2.3",
     "hls.js": "^1.2.4",
     "next": "12.3.1",
     "plyr": "^3.7.2",
     "react": "18.2.0",
     "react-animejs-wrapper": "^1.0.35",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.6.0"
   },
