--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "react-animejs-wrapper": "^1.0.35",
     "react-bootstrap": "^2.6.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.6.0"
+    "react-icons": "^4.6.0",
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "eslint": "8.25.0",
