--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,13 @@
     "@supabase/auth-ui-react": "^0.2.6",
     "@supabase/supabase-js": "^2.0.4",
     "@supabase/ui": "^0.36.5",
+    "aws-sdk": "^2.1295.0",
+    "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
+    "filepond": "^4.30.4",
+    "filepond-plugin-file-validate-type": "^1.2.8",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.11",
     "hls.js": "^1.2.4",
     "next": "12.3.1",
     "plyr": "^3.7.2",
@@ -25,8 +31,10 @@
     "react-animejs-wrapper": "^1.0.35",
     "react-bootstrap": "^2.6.0",
     "react-dom": "18.2.0",
+    "react-filepond": "^7.1.2",
     "react-icons": "^4.6.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "eslint": "8.25.0",
