--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,7 +5,7 @@ on:
     branches: main
   workflow_dispatch:
 
-jobs: 
+jobs:
   format:
     name: formatting
     runs-on: ubuntu-latest
@@ -16,7 +16,5 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "16.14.2"
-      - run: yarn install
-      - run: yarn add prettier
-      - run: yarn check
-      
+      - run: npm ci
+      - run: npm run format
