--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -9,7 +9,6 @@ jobs:
   format:
     name: formatting
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
       - name: Use Node.js
@@ -18,3 +17,14 @@ jobs:
           node-version: "16.14.2"
       - run: npm ci
       - run: npm run format
+  linting:
+    name: linting
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "16.14.2"
+      - run: npm ci
+      - run: npm run eslint
