--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write \"/components/**/*.js\" \"/pages/**/*.js\"", 
-    "check": "prettier --check \"/components/**/*.js\" \"/pages/**/*.js\""
+    "format": "prettier --write .",
+    "check": "prettier --check .",
+    "eslint": "eslint . --ext js --ext jsx"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -20,6 +21,7 @@
     "@supabase/supabase-js": "^2.0.4",
     "@supabase/ui": "^0.36.5",
     "bootstrap": "^5.2.3",
+    "eslint-config-prettier": "^8.6.0",
     "hls.js": "^1.2.4",
     "next": "12.3.1",
     "plyr": "^3.7.2",
@@ -31,7 +33,10 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
-    "eslint": "8.25.0",
-    "eslint-config-next": "12.3.1"
+    "eslint": "^8.32.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-config-next": "^12.3.1",
+    "eslint-plugin-react": "^7.32.1",
+    "prettier": "^2.8.3"
   }
 }
