--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,26 +1,25 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-        "plugin:react/recommended",
-        "google", "prettier", "next/core-web-vitals"
-    ],
-    "overrides": [
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react"
-    ],
-    "rules": {
-        "prefer-const": "off",
-        "require-jsdoc": "off",
-        "react-hooks/exhaustive-deps": "off",
-        "camelcase": "off",
-        "@next/next/no-img-element": "off"
-    }
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": [
+    "plugin:react/recommended",
+    "google",
+    "prettier",
+    "next/core-web-vitals"
+  ],
+  "overrides": [],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": ["react"],
+  "rules": {
+    "prefer-const": "off",
+    "require-jsdoc": "off",
+    "react-hooks/exhaustive-deps": "off",
+    "camelcase": "off",
+    "@next/next/no-img-element": "off"
+  }
 }
