Switched workflow to yarn

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,8 +15,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "16.14.2"
-      - run: npm ci
-      - run: npm run format
+      - run: yarn install
+      - run: yarn verify
   linting:
     name: linting
     runs-on: ubuntu-latest
@@ -26,5 +26,5 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "16.14.2"
-      - run: npm ci
-      - run: npm run eslint
+      - run: yarn install
+      - run: yarn eslint
