--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write .",
-    "check": "prettier --check .",
+    "verify": "prettier --check .",
     "eslint": "eslint . --ext js --ext jsx"
   },
   "dependencies": {
