--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint",
     "format": "prettier --write .",
     "verify": "prettier --check .",
-    "eslint": "eslint . --ext js --ext jsx"
+    "eslint": "eslint . --ext js --ext jsx",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.257.0",
@@ -44,13 +46,14 @@
     "yarn": "^1.22.19"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.32.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-next": "^12.3.1",
     "eslint-plugin-react": "^7.32.1",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.3",
-    "tailwindcss": "^3.2.7"
+    "prettier": "^2.8.3"
   }
 }
