--- a/package.json
+++ b/package.json
@@ -44,10 +44,13 @@
     "yarn": "^1.22.19"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.32.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-next": "^12.3.1",
     "eslint-plugin-react": "^7.32.1",
-    "prettier": "^2.8.3"
+    "postcss": "^8.4.21",
+    "prettier": "^2.8.3",
+    "tailwindcss": "^3.2.7"
   }
 }
