--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-config-next": "^12.3.1",
     "eslint-plugin-react": "^7.32.1",
-    "prettier": "^2.8.3"
+    "prettier": "^2.8.3",
+    "tailwindcss": "^3.2.7"
   }
 }
