add testing to ci

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -28,3 +28,14 @@ jobs:
           node-version: "16.14.2"
       - run: yarn install
       - run: yarn eslint
+  testing:
+    name: testing
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "16.14.2"
+      - run: yarn install
+      - run: yarn test
