--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -38,4 +38,4 @@ jobs:
         with:
           node-version: "16.14.2"
       - run: yarn install
-      - run: yarn test
+      - run: yarn test:ci
