--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "18.2.0",
     "react-filepond": "^7.1.2",
     "react-icons": "^4.6.0",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^5.3.6",
     "yarn": "^1.22.19"
   },
